// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card is rendered 1`] = `
.emotion-15 {
  margin: 1rem;
}

.emotion-6 {
  color: hsl(0,0%,45%);
}

.emotion-16 {
  border-radius: 0.25rem;
  box-shadow: 0 2px 6px 0 hsla(0,0%,0%,0.2);
}

.emotion-4 {
  font-weight: bold;
  line-height: 1.4;
  margin-bottom: 0.75rem;
}

.emotion-2 {
  color: hsl(44,56%,32%);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-7 {
  font-family: "Segoe UI Emoji";
  margin-right: 0.25em;
}

.emotion-0 {
  border-radius: 0.25rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: block;
  height: 12rem;
  background-image: url(https://url_to_img);
  background-size: cover;
  background-position: center center;
}

<div
  class="emotion-16 emotion-17"
>
  <a
    href="https://example.com"
    rel="nofollow"
    class="emotion-0 emotion-1"
  />
  <div
    class="emotion-15"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <a
        href="https://example.com"
        rel="nofollow"
        class="emotion-2 emotion-3"
      >
        Little Big Burger
      </a>
    </div>
    <p
      class="emotion-6"
    >
      100.00
    </p>
    <address>
      <div>
        <span
          class="emotion-10"
        >
          <span
            class="emotion-7"
            role="img"
            aria-label="round pushpin"
          >
            📍
          </span>
          <a
            href="https://url_to_map"
            class="emotion-2 emotion-3"
          >
            123 Main Street
          </a>
        </span>
      </div>
      <div>
        <span
          class="emotion-10"
        >
          <span
            class="emotion-7"
            role="img"
            aria-label="phone receiver"
          >
            📞
          </span>
          <a
            href="tel:503-543-2345"
            class="emotion-2 emotion-3"
          >
            503-543-2345
          </a>
        </span>
      </div>
    </address>
  </div>
</div>
`;

exports[`Card w/o phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -43,27 +43,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1nc9tcc-EmojiLabel-EmojiLabel\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             class=\\"css-lm9lwg-EmojiLabel-EmojiLabel\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-           <a
-             class=\\"css-yhnxzn-Link ek86r7m0\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price and phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -18,15 +18,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p
-       class=\\"css-1nmt006-Card-Card\\"
-     >
-       100.00
-     </p>
      <address>
        <div>
          <span
            class=\\"css-1nc9tcc-EmojiLabel-EmojiLabel\\"
          >
@@ -43,27 +38,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1nc9tcc-EmojiLabel-EmojiLabel\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             class=\\"css-lm9lwg-EmojiLabel-EmojiLabel\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-           <a
-             class=\\"css-yhnxzn-Link ek86r7m0\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -18,15 +18,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p
-       class=\\"css-1nmt006-Card-Card\\"
-     >
-       100.00
-     </p>
      <address>
        <div>
          <span
            class=\\"css-1nc9tcc-EmojiLabel-EmojiLabel\\"
          >"
`;
